Agregué ejemplos de herencia en CSS y actualicé el proyecto

--- a/index.html
+++ b/index.html
@@ -21,8 +21,24 @@
     <main>
         <h1>¡Hola, soy Luis Eduardo de DEV.F BECALOS TECH CHALLENGE!</h1>
         <p>Esta es mi primera página web con CSS.</p>
-        <p>CSS se utiliza para separar el contenido de una página web (que está definido en HTML) de su presentación o diseño. Esta separación es importante porque te permite modificar cómo se ve tu página web sin tocar su estructura o su contenido. Por ejemplo, si decides cambiar el color de fondo de todas tus páginas, solo necesitas cambiar una línea de código en tu archivo CSS, ¡y listo! Todos los cambios se aplican automáticamente.</p>
-        <p>Además, CSS es increíblemente poderoso porque te permite crear diseños responsivos. Es decir, tus páginas web se adaptarán perfectamente a diferentes tamaños de pantalla: desde la pantalla grande de una computadora hasta el pequeño espacio de un teléfono móvil.</p>
+        <section class="contenido">
+            <h2>¿Qué es CSS?</h2>
+            <p>
+                CSS es un lenguaje de diseño que permite separar la presentación del contenido en una página web.
+                Esto facilita cambios rápidos en el diseño, como el color de fondo o la tipografía.
+            </p>
+            <p class="nota">
+                Nota: Este párrafo tiene estilos únicos que sobrescriben los estilos heredados.
+            </p>
+            <article>
+                <h3>Ventajas de CSS</h3>
+                <ul>
+                    <li>Facilidad para cambiar el diseño.</li>
+                    <li>Diseños responsivos para adaptarse a cualquier dispositivo.</li>
+                    <li>Mayor control visual sobre el contenido.</li>
+                </ul>
+            </article>
+        </section>
         <img src="https://pbs.twimg.com/profile_images/1569806172319875073/JIn3eNLT_400x400.jpg" alt="logo devf" width="400">
     </main>
 
