Implementé Flexbox en una nueva sección del proyecto

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             </article>
         </section>
         <img src="https://pbs.twimg.com/profile_images/1569806172319875073/JIn3eNLT_400x400.jpg" alt="logo devf" width="400">
+        <section class="flexbox-ejemplo">
+            <h2>Ejemplo de Flexbox</h2>
+            <div class="flex-container">
+                <div class="flex-item">Elemento 1</div>
+                <div class="flex-item">Elemento 2</div>
+                <div class="flex-item">Elemento 3</div>
+            </div>
+        </section>
+        
     </main>
 
     <footer>
