--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
                 <div class="flex-item">Elemento 3</div>
             </div>
         </section>
+        <section class="flexbox-alineacion">
+            <h2>Ejemplos de Alineación con Flexbox</h2>
+            
+            <!-- Contenedor con Flexbox -->
+            <div class="flex-container-alineacion">
+                <div class="flex-item">Elemento 1</div>
+                <div class="flex-item">Elemento 2</div>
+                <div class="flex-item">Elemento 3</div>
+                <div class="flex-item">Elemento 4</div>
+            </div>
+        </section>
         
     </main>
 
