Agregado Media Queries para responsividad del proyecto

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                 <div class="flex-item">Item 3</div>
             </div>
         </section>
+        <section class="responsive">
+            <h2>Ejemplo de Responsividad</h2>
+            <p>
+                Esta sección demuestra cómo la página se adapta a diferentes tamaños de pantalla gracias a las Media Queries. 
+                Prueba reducir el tamaño de tu navegador o visualizarla desde un dispositivo móvil.
+            </p>
+        </section>
         
     </main>
 
